# GoodOldMeServer

./: .ansible-lint  .gitignore  .gitmodules  README.md  update_deploy.py
.github/: dependabot.yml
.github/ci/: path-filters.yml
.github/scripts/: detect_iac_impact.sh  preflight_network_access.sh  render_inventory_from_tfc_outputs.sh  resolve_meta_context.sh  trigger_webhooks_with_gates.sh  verify_trusted_stacks_sha.sh  wait_for_tfc_run.sh  (+1 more)
.github/scripts/plan/: project_plan_outputs.sh  pyproject.toml  resolve_ci_plan.sh  resolve_iac_plan.sh  resolve_meta_plan.sh  validate_dispatch_payload.sh  validate_plan_json.sh
.github/scripts/plan/ci_plan/: __init__.py  __main__.py  dispatch_validator.py  git.py  github_actions.py  models.py  resolver.py  rules.py
.github/scripts/plan/ci_plan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
.github/scripts/plan/tests/: conftest.py  test_dispatch_validator.py  test_output_format.py  test_phase_detection.py  test_resolver.py  test_stage_derivation.py
ansible/: ansible.cfg  requirements.yml
ci/: pyproject.toml
docs/: ansible.md  backup-strategy.md  ci-impact-rules.md  ci-orchestrator-execution-rules.md  ci-plan-contract.md  deployment-runbook.md  gcp-wif-tfc-setup.md  github-actions-workflows.md  index.md  infisical-workflow.md  meta-pipeline-cutover-checklist.md  network-architecture.md  oci-tfc-oidc-setup.md  scripts.md  stacks.md  workflow-lifecycle.md
scripts/: cloudflare-dns.sh  import_infisical_secrets.sh  portainer-deploy.sh  portainer-webhook.sh
terraform/: .gitignore  .terraform.lock.hcl  main.tf
(+121 files in other folders)
